# freezer

./: .env.local  .gitignore  Cargo.toml  docker-compose.yml  index.html
.github/workflows/: ci.yml
init/: freezers.json  init.js  init.json
scripts/: init.ers
src/: auth.rs  errors.rs  handlers.rs  lib.rs  main.rs  server.rs  utils.rs
src/auth/: handlers.rs  mod.rs  role.rs
src/model/: freezers.rs  mod.rs  mongo.rs
src/service/: mod.rs  mongo.rs  redis.rs
tests/: auth.rs  basic.rs
