[package]
name = "freezer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
actix-web = { version = "4.2.1" }

num_enum = "0.5.7"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = { version = "0.24.3" }
actix-identity = { version = "0.5.2" }
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.8.0"
actix-session = { version = "0.7.2", features = ["redis-actor-session", "cookie-session"] }
chrono = { version = "0.4.22" }
jwt = { package = "jsonwebtoken", version = "8.1", features = [] }

async-std = { version = "1.12.0" }

dotenv = { version = "0.15.0" }

serde = { version = "1.0.145" }
json = { package = "serde_json", version = "1.0" }

tap = { version = "1.0" }

redis = { version = "0.22.0", features = ["tokio-comp"] }

mongodb = { version = "2.3.1" }
bson = { version = "2.4.0", features = ["uuid-1"] }
uuid = { version = "1.2.1" }

anyhow = { version = "1.0.65" }
futures = { version = "0.3.24" }

ron = "0.8.0"
bytes = "1.2.1"

format-bytes = "0.3.0"

thiserror = { version = "1.0.37" }
regex = "1.6.0"
