[package]
name = "freezer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tap = { version = "1.0" }

tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }

actix-web = { version = "4.2.1" }
actix-identity = { version = "0.5.2" }
actix-web-grants = { version = "3.0.1" }
actix-web-httpauth = { version = "0.8.0" }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
async-std = { version = "1.12.0" }

dotenv = { version = "0.15.0" }

serde = { version = "1.0.145" }
json = { package = "serde_json", version = "1.0" }

mongodb = { version = "2.3.1" }
uuid = { version = "1.2.1" }
bson = { version = "2.4.0" }
redis = { version = "0.22.0", features = ["tokio-comp"] }

anyhow = { version = "1.0.65" }
futures = { version = "0.3.24" }
thiserror = { version = "1.0.37" }

bytes = "1.2.1"
format-bytes = "0.3.0"

# for syntax highlighting (rust-script doesn't have plugin)
[dev-dependencies]
rand = "0.8.5"
fake = "2.5.0"

[[example]]
name = "init"
path = "scripts/init.ers"
